--- a/views/err_notFound.handlebars
+++ b/views/err_notFound.handlebars
@@ -1,3 +1,3 @@
 <h1>404 - Page Not Found!</h1>
 
-<p>Check your address, or go to the GitHub repo for help!</p>
+<p>Check your address, or go to <a href="https://github.com/Start-Out/tinyweight-express-boilerplate">the GitHub repo</a> for help!</p>
